...
        const val BasicSectionPlayback = "settings.basic.section.playback"
        const val BasicSectionDownload = "settings.basic.section.download"
        const val BasicSectionNetwork = "settings.basic.section.network"
        const val BasicSectionLyric = "settings.basic.section.lyric"
        const val BasicSectionCache = "settings.basic.section.cache"
        const val BasicSectionDeveloper = "settings.basic.section.developer"
        const val BasicMaxSearchHistoryLength = "settings.basic.maxSearchHistoryLength"
        const val BasicMusicDetailDefaultPage = "settings.basic.musicDetailDefaultPage"
        const val BasicMusicDetailAwake = "settings.basic.musicDetailAwake"
        const val BasicClickMusicInSearch = "settings.basic.clickMusicInSearch"
        const val BasicClickMusicInAlbum = "settings.basic.clickMusicInAlbum"
        const val BasicMusicOrderInLocalSheet = "settings.basic.musicOrderInLocalSheet"
        const val BasicDefaultPlayQuality = "settings.basic.defaultPlayQuality"
        const val BasicPlayQualityOrder = "settings.basic.playQualityOrder"
        const val BasicMaxDownload = "settings.basic.maxDownload"
        const val BasicDefaultDownloadQuality = "settings.basic.defaultDownloadQuality"
        const val BasicDownloadQualityOrder = "settings.basic.downloadQualityOrder"
        const val BasicUseCellularPlay = "settings.basic.useCellularPlay"
        const val BasicUseCellularDownload = "settings.basic.useCellularDownload"
        const val BasicSilentUpdateDownload = "settings.basic.silentUpdateDownload"
        const val BasicLyricAutoSearch = "settings.basic.lyricAutoSearch"
        const val BasicCacheManagement = "settings.basic.cacheManagement"
        const val ThemeRoot = "settings.theme.root"
        const val ThemeSectionMode = "settings.theme.section.mode"
        const val ThemeSectionTheme = "settings.theme.section.theme"
        const val ThemeFollowSystemSwitch = "settings.theme.followSystemSwitch"
        const val ThemeCardLight = "settings.theme.card.light"
        const val ThemeCardDark = "settings.theme.card.dark"
...
